<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/one"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/four"
        android:layout_alignRight="@+id/four"
        android:layout_below="@+id/display"
        android:layout_marginTop="94dp"
        android:text="@string/btn_one" />

    <Button
        android:id="@+id/two"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/one"
        android:layout_toLeftOf="@+id/three"
        android:layout_toStartOf="@+id/three"
        android:text="@string/btn_two" />

    <Button
        android:id="@+id/three"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/two"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_three" />

    <Button
        android:id="@+id/four"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one"
        android:layout_toLeftOf="@+id/two"
        android:text="@string/btn_four" />

    <Button
        android:id="@+id/five"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/four"
        android:layout_alignLeft="@+id/two"
        android:layout_alignStart="@+id/two"
        android:text="@string/btn_five" />

    <Button
        android:id="@+id/six"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/three"
        android:layout_alignStart="@+id/three"
        android:layout_below="@+id/three"
        android:text="@string/btn_six" />

    <Button
        android:id="@+id/seven"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four"
        android:layout_toLeftOf="@+id/two"
        android:text="@string/btn_seven" />

    <Button
        android:id="@+id/eight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/five"
        android:layout_alignStart="@+id/five"
        android:layout_below="@+id/five"
        android:text="@string/btn_eight" />

    <Button
        android:id="@+id/nine"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/six"
        android:layout_alignStart="@+id/six"
        android:layout_below="@+id/six"
        android:text="@string/btn_nine" />

    <Button
        android:id="@+id/buttonadd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/display"
        android:layout_alignRight="@+id/display"
        android:layout_alignTop="@+id/three"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_toRightOf="@+id/three"
        android:text="@string/btn_add" />

    <Button
        android:id="@+id/buttonsub"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonadd"
        android:layout_alignLeft="@+id/buttonadd"
        android:layout_alignRight="@+id/buttonadd"
        android:layout_alignStart="@+id/buttonadd"
        android:layout_below="@+id/buttonadd"
        android:text="@string/btn_sub" />

    <Button
        android:id="@+id/buttonmul"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonsub"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/buttonsub"
        android:layout_below="@+id/buttonsub"
        android:text="@string/btn_mul" />

    <Button
        android:id="@+id/buttonfloat"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seven"
        android:layout_toLeftOf="@+id/two"
        android:text="@string/btn_float" />

    <Button
        android:id="@+id/zero"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eight"
        android:layout_alignStart="@+id/eight"
        android:layout_below="@+id/eight"
        android:text="@string/btn_zero" />

    <Button
        android:id="@+id/buttonClear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nine"
        android:layout_alignStart="@+id/nine"
        android:layout_below="@+id/nine"
        android:text="@string/btn_clear" />

    <Button
        android:id="@+id/buttondiv"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonmul"
        android:layout_alignLeft="@+id/buttonmul"
        android:layout_alignRight="@+id/buttonmul"
        android:layout_alignStart="@+id/buttonmul"
        android:layout_below="@+id/buttonmul"
        android:text="@string/btn_div" />

    <Button
        android:id="@+id/buttoneql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttondiv"
        android:layout_alignLeft="@+id/buttonfloat"
        android:layout_alignRight="@+id/buttondiv"
        android:layout_alignStart="@+id/buttonfloat"
        android:layout_below="@+id/zero"
        android:layout_marginTop="35dp"
        android:text="@string/btn_eql" />
</RelativeLayout>